# XO

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qpushbuttonid.cpp  qpushbuttonid.h  resource.qrc  win.cpp  win.h
